Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
None
-
None
Description
The changes in LOGCXX-420 seemm to produce exceptions in CachedDateFormatTestCase:
$ ./src/test/cpp/testsuite -v cacheddateformattestcase
...
Line -1: Unexpected std::exception: basic_string::compare
Line -1: Unexpected std::exception: basic_string::compare
Line -1: Unexpected std::exception: basic_string::compare
Attachments
Issue Links
- is related to
-
LOGCXX-420 Possible out_of_range exception for millisecond formats in CachedDateFormat
- Resolved