LOGCXX-425: I added a test for LOGCXX-420 which failed in the former codebase, additionally to the problem with the exceptions. The reason for the exceptions were negativ indices, the calculations for offsets in the magicString introduced in LOGCXX-420 were wrong because the magicString is always 3 chars only.

This and the failing added test for LOGCXX-420 has been fixed, but test 17 of cacheddateformattestcase.cpp is failing now. I will have a look into this afterwards.